fixed mobile footer spacing

--- a/css/style.less
+++ b/css/style.less
@@ -1167,7 +1167,7 @@ footer {
 
 footer {
 //  z-index: -1000;
-  padding-bottom: 16em;
+  padding-bottom: 22em;
   text-align: center;
   a:hover,
   a:hover:before {
@@ -1176,6 +1176,7 @@ footer {
   }
   @media only screen and (min-width: 56em) {
       text-align: left;
+    padding-top: 14em;
   }
   .footer-email {
     @media only screen and (min-width: 56em) and (max-width: 80em) {
